fixed colors reduced amount of overlap Photos aren't perfect but it's school so ¯\_(ツ)_/¯

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   padding: 0 10px;
   box-sizing: border-box;
   font-family: "Pathway Gothic One", sans-serif;
-  color: #fff;
+  color: #EDB159;
 }
 .timeline__content-desc {
   margin: 0;
@@ -57,7 +57,7 @@
   width: 100%;
   position: absolute;
   color: rgba(255, 255, 255, 0.5);
-  font-size: 13px;
+  font-size: 17px;
   font-family: "Pathway Gothic One", sans-serif;
   border-left: 2px solid rgba(255, 255, 255, 0.5);
   top: 70%;
@@ -146,7 +146,7 @@
 .timeline-header__subtitle {
   color: rgba(255, 255, 255, 0.5);
   font-family: "Pathway Gothic One", sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   letter-spacing: 5px;
   margin: 10px 0 0 0;
   font-weight: normal;
